# Open-LLM-Observability

./: .env.example  README.md  agent_obs.sqlite3  pyproject.toml
.playwright-mcp/: page-2026-05-10T05-33-29-349Z.yml  page-2026-05-10T05-33-44-881Z.yml  page-2026-05-10T05-34-53-497Z.yml
docs/: HIGH_LEVEL_OVERVIEW.md  LOW_LEVEL_ARCHITECTURE.md
samples/crewai_example/: README.md
samples/crewai_example/simple_agent/: __main__.py  agent.py
samples/dspy_example/: simple_agent.py
samples/dspy_example/simple_llm/: __main__.py  qa_gen.py
samples/google_example/: README.md
samples/google_example/simple_agent/: .env.example  __main__.py  agent.py
samples/google_example/simple_llm/: __main__.py
samples/langchain_example/: README.md  llms.py
samples/langchain_example/multi_agent/: __init__.py  agent.py  tools.py
samples/langchain_example/simple_agent/: agent.py  prompts.py  tools.py
samples/langchain_example/simple_llm/: __init__.py  __main__.py
samples/openai_agents_example/: README.md
samples/openai_agents_example/simple_agent/: __main__.py  agent.py
samples/openai_agents_example/simple_llm/: __main__.py
tests/: test_context_propagation.py
universal_agent_obs/: __init__.py  __main__.py  core.py  crewai.py  dspy.py  google.py  langchain.py  openai.py
universal_agent_obs/interceptors/: agents.py  crewai.py  dspy.py  google_adk.py  google_genai.py  http.py  langchain.py  openai_sdk.py
universal_agent_obs/server/: __main__.py  app.py  storage.py
universal_agent_obs/server/static/: __init__.py  index.html
